tests/compile_fail/invalid_rule_scope_literal.rs
use surgeist_style::RuleScope;

fn main() {
    let _scope = RuleScope {
        roots: None,
        limits: None,
    };
}
